profilelist1exp/unpackaged/objects/Relationship_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Route_to_Channel__c</fullName>
        <formula>IF( 
AND( 
OR(ISPICKVAL(Status__c, &apos;Requires Follow-Up&apos;),
ISPICKVAL(Status__c, &apos;Accepted - Completed Follow-Up&apos;),
ISPICKVAL(Status__c, &apos;Attempted to Contact - Awaiting Response&apos;),
ISPICKVAL(Status__c, &apos;Rejected - Completed Follow-Up&apos;),
ISPICKVAL(Status__c, &apos;Cancelled - Sales Inactivity&apos;),
ISPICKVAL(Status__c, &apos;Opportunity not Created&apos;)
), 
ISBLANK(Channel_Lead__c), 
$User.Id = Relationship_Lead_Owner__c
), 
HYPERLINK(&apos;/apex/CMAP_RouteToChannel?rlId=&apos;+Id, 
IMAGE(&apos;resource/1362106041000/CMAP_RouteToChannel&apos;, &apos;RouteToChannelButton&apos;),&apos;_parent&apos;), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route to Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Accepted_Date__c</fullName>
        <defaultValue>IF ( 
ISPICKVAL( Accept_Reject_Status__c , &quot;Accepted by Sales&quot;), NOW(), null)</defaultValue>
        <label>Sales Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Comments__c</fullName>
        <label>Sales Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score_Importance__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &quot;High Priority (Extremely hot leads; SLA = 48 hours)&quot;) , 1,
IF( ISPICKVAL( Status__c , &quot;TeleQualified Lead (Potential Opportunity; SLA = 48 hours) Not Checked&quot;) , 2,
IF( ISPICKVAL( Status__c , &quot;Priority (Contact requested follow up; SLA = 1 Week)&quot;) , 3,
100)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Importance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_ID__c</fullName>
        <inlineHelpText>Solution ID provides the recommended solution that has been created for your customer based on information specific to their environment. Go to DellStar and paste the value in the solution ID field to retrieve the solution.</inlineHelpText>
        <label>Solution ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Importance__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &quot;Requires Follow-Up&quot;) , 1,
IF( ISPICKVAL( Status__c , &quot;Opportunity not Created&quot;) , 2,
IF( ISPICKVAL( Status__c , &quot;Opportunity not Linked&quot;) , 3,
IF( ISPICKVAL( Status__c , &quot;Future Follow-Up&quot;) , 4,
IF( ISPICKVAL( Status__c , &quot;Attempted to Contact - Awaiting Response&quot;) , 5,
IF( ISPICKVAL( Status__c , &quot;Accepted - Completed Follow-Up&quot;) , 6,
IF( ISPICKVAL( Status__c , &quot;Rejected - Completed Follow-Up&quot;) , 7,
IF( ISPICKVAL( Status__c , &quot;Routed to Channel&quot;) , 8, 
IF( ISPICKVAL( Status__c , &quot;Inactive&quot;) , 9,
IF( ISPICKVAL( Status__c , &quot;Cancelled&quot;) , 10,
IF( ISPICKVAL( Status__c , &quot;Cancelled - Sales Inactivity&quot;) , 11,
100)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Importance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requires Follow-Up</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Requires Follow-Up</label>
                </value>
                <value>
                    <fullName>Accepted - Completed Follow-Up</fullName>
                    <color>#78C953</color>
                    <label>Accepted - Completed Follow-Up</label>
                </value>
                <value>
                    <fullName>Rejected - Completed Follow-Up</fullName>
                    <color>#A845DC</color>
                    <label>Rejected - Completed Follow-Up</label>
                </value>
                <value>
                    <fullName>Attempted to Contact - Awaiting Response</fullName>
                    <color>#F3D904</color>
                    <label>Attempted to Contact - Awaiting Response</label>
                </value>
                <value>
                    <fullName>Opportunity not Created</fullName>
                    <color>#A53711</color>
                    <label>Opportunity not Created</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#66E9BD</color>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <color>#0B24BE</color>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Opportunity not Linked</fullName>
                    <color>#419249</color>
                    <label>Opportunity not Linked</label>
                </value>
                <value>
                    <fullName>Cancelled - Sales Inactivity</fullName>
                    <color>#FF6666</color>
                    <label>Cancelled - Sales Inactivity</label>
                </value>
                <value>
                    <fullName>Routed to Channel</fullName>
                    <color>#FFCC33</color>
                    <label>Routed to Channel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Information__c</fullName>
        <label>Supporting Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>System_Auto_Populated_AE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL AE System Auto-Populated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Auto_Populated_ISR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL ISR System Auto-Populated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Auto_Populated_RL_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RL Owner System Auto-Populated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_User_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Sales User Assignment</label>
        <referenceTo>Territory_Sales_User_Assignment__c</referenceTo>
        <relationshipLabel>Relationship Leads</relationshipLabel>
        <relationshipName>Relationship_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unqualified_Lead_Reasons__c</fullName>
        <label>Unqualified Lead Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Quality__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Unable to reach</fullName>
                </value>
                <value>
                    <fullName>No budget</fullName>
                </value>
                <value>
                    <fullName>No authority</fullName>
                </value>
                <value>
                    <fullName>No need</fullName>
                </value>
                <value>
                    <fullName>Not ready to buy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Record__c</fullName>
        <formula>IF( 
AND( 
CONTAINS( $User.Profile_Name__c, &apos;Sales&apos;), 
ISPICKVAL(Status__c, &apos;Accepted - Completed Follow-Up&apos;)), 
HYPERLINK(&apos;apex/UpdateOrResetRLorAP?retURL=/&apos; &amp; Id &amp; &apos;&amp;id=&apos; &amp; Id &amp; &apos;&amp;action=Update&apos;, IMAGE(&quot;resource/1257839368000/MA_UpdateRecord&quot;, &apos;Update Record&apos;), &apos;_parent&apos;), 

IF( 
AND( 
CONTAINS( $User.Profile_Name__c, &apos;Sales&apos;), 
ISPICKVAL(Status__c, &apos;Rejected - Completed Follow-Up&apos;)), 
HYPERLINK(&apos;apex/UpdateOrResetRLorAP?retURL=/&apos; &amp; Id &amp; &apos;&amp;id=&apos; &amp; Id &amp; &apos;&amp;action=Update&apos;, IMAGE(&quot;resource/1282810384000/MA_UpdateRecord2&quot;, &apos;Update Record&apos;), &apos;_parent&apos;) &amp; &apos; &apos; &amp; 
HYPERLINK(&apos;apex/UpdateOrResetRLorAP?retURL=/&apos; &amp; Id &amp; &apos;&amp;id=&apos; &amp; Id &amp; &apos;&amp;action=Reset&apos;, IMAGE(&quot;resource/1282810236000/MA_Reset&quot;, &apos;Reset Record&apos;), &apos;_parent&apos;), 

IF( 
AND( 
!(ISPICKVAL(Status__c, &apos;Routed to Channel&apos;)), 
OR( 
CONTAINS( $User.Profile_Name__c, &apos;Marketing&apos;), 
CONTAINS( $User.Profile_Name__c, &apos;System&apos;), 
CONTAINS( $User.Profile_Name__c, &apos;Lead Assignment&apos;), 
CONTAINS( $User.Profile_Name__c, &apos;IT&apos;) 
)), 
HYPERLINK(Id &amp; &apos;/e?nooverride=1&amp;retURL=/&apos; &amp; Id, IMAGE(&quot;resource/1254277273000/MA_UpdateRecord&quot;, &apos;Update Record&apos;), &apos;_parent&apos;), 
&apos; &apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>font_color_fff_Message1__c</fullName>
        <label>&lt;font color=&quot;#fff&quot;&gt;</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>font_color_fff_Message__c</fullName>
        <defaultValue>&quot;*Do Not Edit Fields - Lead Form ID, LiveBall Respondent ID, Omniture ID, Dell Visitor ID in this section *&quot;</defaultValue>
        <label>&lt;font color=&quot;#fff&quot;&gt;Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Days_to_Close_RL__c</fullName>
        <description># of days to close Rel. Lead</description>
        <formula>Relationship_Lead_Close_Date__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days to Close RL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Days_to_Convert_RL_to_SA__c</fullName>
        <description># of days to convert Rel Leads to Sales Accepted</description>
        <formula>Relationship_Lead_Accepted_Date__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days to Convert RL to SA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Relationship Lead</label>
    <listViews>
        <fullName>Awaiting_Follow_Up</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Lead_Owner_Role__c</columns>
        <columns>Relationship_Lead_Owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Attempted to Contact - Awaiting Response</value>
        </filters>
        <label>Attempted to Contact - Awaiting Response</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Completed_Follow_Up</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Relationship_Lead_Owner_Role__c</columns>
        <columns>Relationship_Lead_Owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted - Completed Follow-Up,Rejected - Completed Follow-Up</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed Follow-Up</value>
        </filters>
        <label>Completed Follow-Up</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Future_Follow_Up</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Lead_Owner_Role__c</columns>
        <columns>Relationship_Lead_Owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Future Follow-Up</value>
        </filters>
        <label>Future Follow-Up</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_All</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Relationship_Lead_Owner_Role__c</columns>
        <columns>Relationship_Lead_Owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requires Follow-Up,Future Follow-Up,Opportunity not Created</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Opportunity not Linked,Attempted to Contact - Awaiting Response</value>
        </filters>
        <label>All Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opportunity_Not_Created</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Lead_Owner_Role__c</columns>
        <columns>Relationship_Lead_Owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Opportunity not Created</value>
        </filters>
        <label>Opportunity Not Created</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opportunity_not_Linked</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Lead_Owner_Role__c</columns>
        <columns>Relationship_Lead_Owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Opportunity not Linked</value>
        </filters>
        <label>Opportunity Not Linked</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_Cancellations_22_30_days_Urgent</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Lead_Owner_Role__c</columns>
        <columns>Relationship_Lead_Owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Campaign_Vehicle__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requires Follow-Up</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>notEqual</operation>
            <value>LAST_N_DAYS:22</value>
        </filters>
        <label>Pending Cancellations- 22-30 days Urgent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Requires_Follow_Up</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Lead_Owner_Role__c</columns>
        <columns>Relationship_Lead_Owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requires Follow-Up</value>
        </filters>
        <label>Requires Follow-Up</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Requires_Follow_Up_Created_Last_30_Days1</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Lead_Owner_Role__c</columns>
        <columns>Relationship_Lead_Owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requires Follow-Up</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Requires Follow-Up(Created Last 30 Days)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Requires_Follow_Up_Created_Last_90_Days</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Lead_Owner_Role__c</columns>
        <columns>Relationship_Lead_Owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requires Follow-Up</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>Requires Follow-Up(Created Last 90 Days)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Requires_Follow_Up_Due_Next_Month</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requires Follow-Up</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Requires Follow-Up(Due Next Month)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Requires_Follow_Up_Due_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Lead_Owner_Role__c</columns>
        <columns>Relationship_Lead_Owner__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requires Follow-Up</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Requires Follow-Up(Due This Month)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RL - {000000000}</displayFormat>
        <label>Relationship Lead #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Leads</pluralLabel>
    <recordTypes>
        <fullName>GBL_Relationship_Lead_RT_R10_10</fullName>
        <active>true</active>
        <label>GBL_Relationship_Lead_RT_R10.10</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CMAP_Cant_Associate_RL_to_Channel_Camp</fullName>
        <active>true</active>
        <description>R14.2 CMAP Validation Rule to prevent user from creating a new Relationship Lead when RT is Channel Campaign.</description>
        <errorConditionFormula>Campaign__r.RecordTypeId = &quot;012A00000012Xt5&quot;</errorConditionFormula>
        <errorMessage>Cannot associate a Relationship Lead to a Channel Campaign.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CR8969_Route_to_Channel_Manual_Update</fullName>
        <active>true</active>
        <description>&quot;Routed to channel&quot; status option may NOT be manually chosen by a user in any of the following 3 fields. 1) Relationship lead status, 2) Relationship lead accept/ reject/ reassign status, and 3) Lead Status</description>
        <errorConditionFormula>AND((ISBLANK( Channel_Lead__c )) ,(ISPICKVAL( Status__c , &quot;Routed to Channel&quot;) || ISPICKVAL( Accept_Reject_Status__c ,&quot;Routed to Channel&quot;)))</errorConditionFormula>
        <errorMessage>Status can be Routed to Channel only if Lead is converted to a Channel Lead through routing . Click on Route to Channel button for routing Lead to Channel Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Member_ID_or_Lead_ID_Req</fullName>
        <active>true</active>
        <description>The Relationship Lead needs to have a corresponding Campaign Member or Lead record, whose ID must be populated.</description>
        <errorConditionFormula>AND(ISBLANK( CM_Source__c ) ,ISBLANK( Lead_ID_Do_Not_Edit__c ))</errorConditionFormula>
        <errorDisplayField>font_color_fff_Message1__c</errorDisplayField>
        <errorMessage>A Relationship Lead record should be only created from the &quot;Convert To Relationship Lead&quot; button on a Campaign Member / Lead record, or through Dataload with the CM Source ID or Lead ID populated in the template.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Name_Mandatory_for_Rel_Lead</fullName>
        <active>true</active>
        <description>Field is mandatory even when it is coming from integration and data load.</description>
        <errorConditionFormula>AND(
NOT($Setup.System_Behavior_Bypasser__c.Bypass_Opportunity_VRs__c),
ISBLANK( Campaign__c ) 
)</errorConditionFormula>
        <errorMessage>Campaign is mandatory for Relationship Lead records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_name_should_not_be_changed</fullName>
        <active>true</active>
        <description>After creating a relationship lead records, the campaign name should not be changed</description>
        <errorConditionFormula>AND( NOT( ISNEW()), ISCHANGED( Campaign__c ))</errorConditionFormula>
        <errorMessage>Campaign name should not be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Channel_Consent_to_Engage_Validation</fullName>
        <active>true</active>
        <description>To check if the Consent to Engage Dell Channel Partner field is not edited by any user other than RL owner.</description>
        <errorConditionFormula>ISCHANGED(Consent_to_engage_Dell_Channel_Partner__c ) &amp;&amp; $User.Id != Relationship_Lead_Owner__r.Id &amp;&amp;  !(Channel_Lead__c !=null &amp;&amp;   ISPICKVAL(Status__c, &apos;Requires Follow-Up&apos;))</errorConditionFormula>
        <errorMessage>Customer consents to engage Partner is only editable to Relationship Lead Owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Follow_Up_Date_is_required</fullName>
        <active>true</active>
        <description>If Unqualified Lead Reason is Future Follow-Up, Follow-Up Date should not be blank</description>
        <errorConditionFormula>AND( OR(ISPICKVAL( Unqualified_Lead_Reasons__c , &apos;Future Follow-Up&apos;), ISPICKVAL( Called_Customer__c , &quot;No&quot;) ), ISNULL(Follow_Up_Date__c) )</errorConditionFormula>
        <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
        <errorMessage>Please enter the Follow-Up Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RL_Cancelled_only_by_GBL_Data_Admin</fullName>
        <active>false</active>
        <description>&quot;Cancelled - Sales inactivity&quot; should only be selectable only by profile GBL Marketing/Data Admin Profile or via DLR or by Rxx.xx GBL Admin Marketing User Non-SSO profile.</description>
        <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Cancelled - Sales Inactivity&apos;),
NOT ( OR ( 
CONTAINS($User.Profile_Name__c, &apos;GBL Marketing/Data Admin&apos; ),
CONTAINS($User.Profile_Name__c, &apos;IT GBL Data Load&apos; ),
CONTAINS($User.Profile_Name__c, &apos;GBL Admin Marketing User - Non SSO&apos; )
) ))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only marketing admin users may apply the ‘Cancelled – Sales Inactivity’ Relationship Lead status to leads.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RL_and_Inactive_Campaign_Rule</fullName>
        <active>true</active>
        <description>Relationship Lead records should not be created for Inactive Campaigns</description>
        <errorConditionFormula>AND(ISNEW(), NOT( Campaign__r.IsActive = TRUE ))</errorConditionFormula>
        <errorMessage>Relationship Lead records should not be created for Inactive Campaigns</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RL_be_default_Req_FollowUp_status</fullName>
        <active>true</active>
        <description>Relationship Lead status on creation should be Requires Follow-Up</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c,&quot;Requires Follow-Up&quot;)),ISNEW())</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Relationship Lead record must have  &quot;Requires Follow-Up&quot; status on creation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RL_record_shouldnt_exist_for_Sales_Touch</fullName>
        <active>true</active>
        <description>Relationship Lead records should not be created for Account campaigns</description>
        <errorConditionFormula>Campaign__r.Is_this_Account_Play_Campaign__c = TRUE</errorConditionFormula>
        <errorMessage>Relationship Lead records should not be created for Account campaigns</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rejection_Reason_is_Mandatory</fullName>
        <active>false</active>
        <description>Rejection Reason is Mandatory for rejected leads</description>
        <errorConditionFormula>AND(ISPICKVAL( Accept_Reject_Status__c , &quot;Rejected By Sales&quot;), ISPICKVAL( Rejection_Reason__c , &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Rejection_Reason__c</errorDisplayField>
        <errorMessage>Please select a Rejection Reason</errorMessage>
    </validationRules>
</CustomObject>